chore: 提交阶段性开发变更（前端页面/后端Controller/Entity/Service/SQL/调试脚本）
- moyuyo-app：新增/修改多个 user、order、pet、community、cart、tabbar 页面
- moyuyo-server：新增 Achievement/Affiliate/Block/Cs/Device/Follow/Help 等 Controller 与对应 Entity/Mapper/Service
- 新增数据库迁移：V20260825_01/02、V20260826_01
- 附带调试脚本与日志快照

Co-Authored-By: Claude <noreply@anthropic.com>